objects/SLA_Levels__mdt.object
<CustomObject>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_1_SLA_Hours__c</fullName>
        <label>Level 1 SLA Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_SLA_Hours__c</fullName>
        <label>Level 2 SLA Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_SLA_Hours__c</fullName>
        <label>Level 3 SLA Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Level_1_Role_1__c</fullName>
        <label>SLA Level 1 Role 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zone Manager</fullName>
                    <default>true</default>
                    <label>Zone Manager</label>
                </value>
                <value>
                    <fullName>Assistant Zone Manager</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>TA/Admin</fullName>
                </value>
                <value>
                    <fullName>DSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Level_1_Role_2__c</fullName>
        <label>SLA Level 1 Role 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zone Manager</fullName>
                    <default>true</default>
                    <label>Zone Manager</label>
                </value>
                <value>
                    <fullName>Assistant Zone Manager</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>TA/Admin</fullName>
                </value>
                <value>
                    <fullName>DSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Level_1_Role_3__c</fullName>
        <label>SLA Level 1 Role 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zone Manager</fullName>
                    <default>true</default>
                    <label>Zone Manager</label>
                </value>
                <value>
                    <fullName>Assistant Zone Manager</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>TA/Admin</fullName>
                </value>
                <value>
                    <fullName>DSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubDivision__c</fullName>
        <label>SubDivision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acura</fullName>
                    <default>true</default>
                    <label>Acura</label>
                </value>
                <value>
                    <fullName>Engine</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>PowerEquipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SLA Levels</label>
    <pluralLabel>SLA Levels</pluralLabel>
</CustomObject>